[project]
name = "pyprobables"
version = "0.5.6"
authors = [{name = "Tyler Barrus", email = "barrust@gmail.com"}]
license = {text = "MIT"}
description = "Probabilistic data structures in python"
keywords = [
    "python",
    "probabilistic",
    "data-structure",
    "bloom",
    "filter",
    "count-min",
    "sketch",
    "bloom-filter",
    "count-min-sketch",
    "cuckoo-filter",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    #"Programming Language :: Python :: 3.5",
    #"Programming Language :: Python :: 3.6",
    #"Programming Language :: Python :: 3.7",
    #"Programming Language :: Python :: 3.8",
    #"Programming Language :: Python :: 3.9",
    #"Programming Language :: Python :: 3.10",
]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/barrust/pyprobables"
Bug-tracker = "https://github.com/barrust/pyprobables/issues"
Documentation = "https://pyprobables.readthedocs.io/"

[tool.poetry]
packages = [
        {include = "probables"},
]

[tool.poetry.dev-dependencies]
pre-commit = {version = ">=2.18.1", python = "^3.6.1"}
black = {version = "^20.8b1", python = "^3.6"}
isort = {version = "^5.6.4", python = "^3.6"}
pytest = {version = "^6.1.1", python = "^3.5"}
flake8 = {version = "^3.6.0", python = "^3.5"}

[tool.setuptools.packages.find]
include = ["probables", "probables.*"]

[tool.flit.module]
name = "probables"

[tool.distutils.bdist_wheel]
universal = 0

[tool.pep8]
max-line-length = 120

[tool.pycodestyle]
max-line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py35']
include = '\.pyi?$'

[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

#requires = ["flit_core>=3.2"]
#build-backend = "flit_core.buildapi"

requires = ["setuptools>=61.2.0", "wheel"]
build-backend = "setuptools.build_meta"
